test/should_pass/basic_021.grg
actions basic_021;

rule r {
	pattern {
		x : Node;
		y : Node;
		negative {
			x --> y : Node;
		}
	}
	modify {
	}
}

