test/should_fail/annot_003.grg
actions annot_003;

rule r {
	pattern {
		[prio=42] <-- .;
	}
	modify {}
}
